Updated streams.read.Read